# model/model.go
@@ -1,26 +1,26 @@
 package model
 
 type GetProjectListReq struct {
-	ID          int    `json:"id" form:"id"`                                    // 项目id
-	Name        string `json:"name" form:"name"`                                // 项目名称
-	Department  string `json:"department" form:"department"`                    // 项目所属部门
-	Admin       string `json:"admin" form:"admin"`                              // 管理员
-	ProjectUser string `json:"project_user" form:"project_user"`                // 项目创建者
-	DevelopUser string `json:"develop_user" form:"develop_user"`                // 项目的开发人员
-	PageIndex   int    `json:"page_index" form:"page_index" binding:"required"` // 页码
-	PageSize    int    `json:"page_size"  form:"page_size"  binding:"required"` // 页大小
+	ID          int    `json:"id" form:"id"`                                        // 项目id
+	Name        string `json:"name" form:"name"`                                    // 项目名称
+	Department  string `json:"department" form:"department"`                        // 项目所属部门
+	Admin       string `json:"admin" form:"admin"`                                  // 管理员
+	ProjectUser string `json:"project_user" form:"project_user" binding:"required"` // 项目创建者
+	DevelopUser string `json:"develop_user" form:"develop_user"`                    // 项目的开发人员
+	PageIndex   int    `json:"page_index" form:"page_index" binding:"required"`     // 页码
+	PageSize    int    `json:"page_size"  form:"page_size"  binding:"required"`     // 页大小
 }
 
 type ProjectInfo struct {
-	ID          int    `json:"id"`                     // 项目id
-	Name        string `json:"name"`                   // 项目名称
-	Description string `json:"description,omitempty"`  // 项目描述
-	Department  string `json:"department,omitempty"`   // 项目所属部门
-	Admin       string `json:"admin,omitempty"`        // 管理员
-	ProjectUser string `json:"project_user"`           // 项目创建者
-	DevelopUser string `json:"develop_user,omitempty"` // 项目的开发人员
-	CreateTime  string `json:"create_time"`            // 项目创建时间
-	UpdateTime  string `json:"update_time"`            // 删除时间
+	ID          int      `json:"id"`                     // 项目id
+	Name        string   `json:"name"`                   // 项目名称
+	Description string   `json:"description,omitempty"`  // 项目描述
+	Department  []string `json:"department,omitempty"`   // 项目所属部门
+	Admin       []string `json:"admin,omitempty"`        // 管理员
+	ProjectUser string   `json:"project_user"`           // 项目创建者
+	DevelopUser []string `json:"develop_user,omitempty"` // 项目的开发人员
+	CreateTime  string   `json:"create_time"`            // 项目创建时间
+	UpdateTime  string   `json:"update_time"`            // 更新时间
 }
 
 type GetProjectListResp struct {
@@ -31,6 +31,28 @@ type GetProjectListResp struct {
 type GetProjectDetailReq struct {
 	ID   int    `json:"id" form:"id" binding:"required"` // 项目id
 	Name string `json:"name" form:"name"`                // 项目名称
+}
+
+type AddProject struct {
+	Name        string   `json:"name" binding:"required"`         // 项目名称
+	Description string   `json:"description"`                     // 项目描述
+	Department  []string `json:"department"`                      // 项目所属部门
+	Admin       []string `json:"admin"`                           // 管理员
+	ProjectUser string   `json:"project_user" binding:"required"` // 项目创建者
+	DevelopUser []string `json:"develop_user"`                    // 项目的开发人员
+}
+
+type EditProject struct {
+	ID          int      `json:"id" form:"id" binding:"required"` // 项目id
+	Description string   `json:"description"`                     // 项目描述
+	Department  []string `json:"department"`                      // 项目所属部门
+	Admin       []string `json:"admin"`                           // 管理员
+	DevelopUser []string `json:"develop_user"`                    // 项目的开发人员
+}
+
+type DeleteProject struct {
+	ID          int    `json:"id" form:"id" binding:"required"` // 项目id
+	ProjectUser string `json:"project_user" form:"id"`          // 项目创建者
 }
 
 /*
